<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailLabel"
        android:text="@string/emailLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/emailLabel"
        app:layout_constraintTop_toTopOf="@id/emailField"
        android:layout_marginLeft="12dp"
        android:id="@+id/emailField"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameLabel"
        app:layout_constraintTop_toBottomOf="@id/emailField"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="18dp"
        android:text="@string/username"
        />

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:id="@+id/usernameField"
        app:layout_constraintTop_toTopOf="@id/usernameLabel"
        app:layout_constraintLeft_toRightOf="@id/usernameLabel"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordLabel"
        android:text="@string/passwordLabel"
        app:layout_constraintTop_toBottomOf="@id/usernameLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="18dp"
        />

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:id="@+id/passwordField"
        app:layout_constraintTop_toTopOf="@id/passwordLabel"
        app:layout_constraintLeft_toRightOf="@id/passwordLabel"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:text="@string/registerLabel"
        app:layout_constraintTop_toBottomOf="@id/passwordLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>