<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login_page">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailLabel"
        android:textSize="21sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/emailLabel"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/emailField"
        app:layout_constraintLeft_toRightOf="@id/emailLabel"
        android:layout_marginLeft="12dp"
        app:layout_constraintTop_toTopOf="@id/emailLabel"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordLabel"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@id/emailLabel"
        app:layout_constraintLeft_toLeftOf="@id/emailLabel"
        android:layout_marginTop="12dp"
        android:id="@+id/passwordLabel"
        />
    <EditText
        android:inputType="textPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/passwordField"
        app:layout_constraintLeft_toRightOf="@id/passwordLabel"
        android:layout_marginLeft="12dp"
        app:layout_constraintTop_toTopOf="@id/passwordLabel"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:text="@string/loginLabel"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/register"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="@string/registerLabel"
        android:layout_marginLeft="12dp"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        app:layout_constraintLeft_toRightOf="@id/submit"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toRightOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>